# intentzero2few

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: Dissertation_merve_erdem_20092025.ipynb
reports/20250920-111136/: README_run.md  aug_samples_classic_head20.csv  aug_samples_noisy_head20.csv  baseline_robustness.csv  fewshot_summary.csv  zs_summary.csv
reports/20250921-123702/: README_run.md  aug_samples_classic_head20.csv  baseline_robustness.csv  fewshot_summary.csv  intent_descriptions.csv  run_meta.json  summary_metrics.csv
reports/20250921-185546/: README_run.md  run_meta.json  summary_metrics.csv
reports/20250922-124350/: README_run.md  run_meta.json  summary_metrics.csv  zs_summary.csv
reports/20250923-150959/: README_run.md  benchmark_summary.csv  run_meta.json  super_to_intents.json
reports/20250924-202729/: README_run.md  run_meta.json  zs_summary.csv
reports/20250926-075952/: README_run.md  run_meta.json  zs_summary.csv
src/intentzero2few/: __init__.py  augmentation.py  baselines.py  core.py  dataio.py  discovery.py  eda.py  evaluate.py  fewshot.py  hf_trainers.py  labeling.py  pollution.py  threshold.py  utils_errors.py  utils_io.py  utils_logging.py  viz.py  zeroshot.py
