[project]
name = "intentzero2few"
version = "0.1.0"
description = "Hierarchical Zero->Few intent pipeline (super-intent discovery, zero-shot, few-shot, threshold calibration)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "sentence-transformers>=2.3",
  "datasets>=2.19",
  "transformers>=4.41",
  "umap-learn>=0.5.5",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "nltk>=3.8"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
